versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Configurations.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalConfigurations
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function ConfigurationsDefaultConst() &
      bind(C, name='ConfigurationsDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function ConfigurationsDefaultConst

!! Create, default
function ConfigurationsDefault() &
      bind(C, name='ConfigurationsDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function ConfigurationsDefault

!! Create, general, const
function ConfigurationsCreateConst( &
   configuration, configurationSize &
) &
      bind(C, name='ConfigurationsCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: configurationSize
   type(c_ptr) :: configuration(configurationSize)
   type(c_ptr) :: handle
end function ConfigurationsCreateConst

!! Create, general
function ConfigurationsCreate( &
   configuration, configurationSize &
) &
      bind(C, name='ConfigurationsCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: configurationSize
   type(c_ptr) :: configuration(configurationSize)
   type(c_ptr) :: handle
end function ConfigurationsCreate

!! Assign
subroutine ConfigurationsAssign(handleLHS, handleRHS) &
      bind(C, name='ConfigurationsAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine ConfigurationsAssign

!! Delete
subroutine ConfigurationsDelete(handle) &
      bind(C, name='ConfigurationsDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine ConfigurationsDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function ConfigurationsRead(handle, filename, filenameSize) &
      bind(C, name='ConfigurationsRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function ConfigurationsRead

!! Write to file
function ConfigurationsWrite(handle, filename, filenameSize) &
      bind(C, name='ConfigurationsWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function ConfigurationsWrite

!! Print to standard output, in our prettyprinting format
function ConfigurationsPrint(handle) &
      bind(C, name='ConfigurationsPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ConfigurationsPrint

!! Print to standard output, as XML
function ConfigurationsPrintXML(handle) &
      bind(C, name='ConfigurationsPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ConfigurationsPrintXML

!! Print to standard output, as JSON
function ConfigurationsPrintJSON(handle) &
      bind(C, name='ConfigurationsPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ConfigurationsPrintJSON


!! -----------------------------------------------------------------------------
!! Child: configuration
!! -----------------------------------------------------------------------------

!! Has
function ConfigurationsConfigurationHas(handle) &
      bind(C, name='ConfigurationsConfigurationHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ConfigurationsConfigurationHas

!! Clear
subroutine ConfigurationsConfigurationClear(handle) &
      bind(C, name='ConfigurationsConfigurationClear')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine ConfigurationsConfigurationClear

!! Size
function ConfigurationsConfigurationSize(handle) &
      bind(C, name='ConfigurationsConfigurationSize') &
      result(vectorSize)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t) :: vectorSize
end function ConfigurationsConfigurationSize

!! Add
subroutine ConfigurationsConfigurationAdd(handle, fieldHandle) &
      bind(C, name='ConfigurationsConfigurationAdd')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine ConfigurationsConfigurationAdd

!! Get, by index \in [0,size), const
function ConfigurationsConfigurationGetConst(handle, index) &
      bind(C, name='ConfigurationsConfigurationGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function ConfigurationsConfigurationGetConst

!! Get, by index \in [0,size)
function ConfigurationsConfigurationGet(handle, index) &
      bind(C, name='ConfigurationsConfigurationGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function ConfigurationsConfigurationGet

!! Set, by index \in [0,size)
subroutine ConfigurationsConfigurationSet(handle, index, fieldHandle) &
      bind(C, name='ConfigurationsConfigurationSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine ConfigurationsConfigurationSet

!! ------------------------
!! Re: metadatum subshell
!! ------------------------

!! Has, by subshell
function ConfigurationsConfigurationHasBySubshell(handle, meta, metaSize) &
      bind(C, name='ConfigurationsConfigurationHasBySubshell') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function ConfigurationsConfigurationHasBySubshell

!! Get, by subshell, const
function ConfigurationsConfigurationGetBySubshellConst(handle, meta, metaSize) &
      bind(C, name='ConfigurationsConfigurationGetBySubshellConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function ConfigurationsConfigurationGetBySubshellConst

!! Get, by subshell
function ConfigurationsConfigurationGetBySubshell(handle, meta, metaSize) &
      bind(C, name='ConfigurationsConfigurationGetBySubshell') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function ConfigurationsConfigurationGetBySubshell

!! Set, by subshell
subroutine ConfigurationsConfigurationSetBySubshell(handle, meta, metaSize, fieldHandle) &
      bind(C, name='ConfigurationsConfigurationSetBySubshell')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine ConfigurationsConfigurationSetBySubshell

!! ------------------------
!! Re: metadatum electronNumber
!! ------------------------

!! Has, by electronNumber
function ConfigurationsConfigurationHasByElectronNumber(handle, meta) &
      bind(C, name='ConfigurationsConfigurationHasByElectronNumber') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   integer(c_int) :: has
end function ConfigurationsConfigurationHasByElectronNumber

!! Get, by electronNumber, const
function ConfigurationsConfigurationGetByElectronNumberConst(handle, meta) &
      bind(C, name='ConfigurationsConfigurationGetByElectronNumberConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function ConfigurationsConfigurationGetByElectronNumberConst

!! Get, by electronNumber
function ConfigurationsConfigurationGetByElectronNumber(handle, meta) &
      bind(C, name='ConfigurationsConfigurationGetByElectronNumber') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function ConfigurationsConfigurationGetByElectronNumber

!! Set, by electronNumber
subroutine ConfigurationsConfigurationSetByElectronNumber(handle, meta, fieldHandle) &
      bind(C, name='ConfigurationsConfigurationSetByElectronNumber')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), value, intent(in) :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine ConfigurationsConfigurationSetByElectronNumber


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalConfigurations
